# ztm-project-uchat

./: Cargo.toml  README.md  justfile  package-lock.json
backend/query/: Cargo.toml
backend/query/src/: lib.rs  post.rs  session.rs  user.rs  util.rs
backend/server/: Cargo.toml
backend/server/src/: error.rs  extractor.rs  handler.rs  lib.rs  router.rs
backend/server/src/handler/: post.rs  user.rs
frontend/: Cargo.toml
frontend/src/: app.rs  elements.rs  index.scss  main.rs  page.rs  tailwind.css  util.rs
frontend/src/elements/: navbar.rs  toaster.rs
frontend/src/elements/post/: actionbar.rs  quick_respond.rs
frontend/src/page/: home.rs  login.rs  register.rs
frontend/src/page/new_post/: chat.rs  image.rs
frontend/src/util/: api_client.rs  cookie.rs
shared/domain/: Cargo.toml
shared/domain/src/: ids.rs  post.rs  user.rs
shared/endpoint/: Cargo.toml
shared/endpoint/src/: lib.rs
shared/endpoint/src/post/: endpoint.rs  types.rs
shared/endpoint/src/user/: endpoint.rs  types.rs
