[package]
name = "uchat_endpoint"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
load-dotenv = "0.1.2"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.17.0", features = ["serde", "v4", "js"] }

uchat_domain = {path = "../domain"}
